--- a/blogger/app/views/articles/show.html.erb
+++ b/blogger/app/views/articles/show.html.erb
@@ -18,8 +18,10 @@
 <%= render partial: 'articles/comments/form' %>
 <%= link_to "<< Back to Articles List", articles_path %>
 
+
+<% if logged_in? %>
 <%= link_to "delete", article_path(@article), method: :delete %>
 <%= link_to "edit", edit_article_path(@article) %>
-
+<% end %>
 <%# data: {confirm: "Really delete the article?"} WHERE DOES THIS CONFIRM GO?%>
 
